job: data read optimization